--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "gulp": "~3.8.9",
-    "gulp-ruby-sass": "~0.7.1"
+    "gulp-ruby-sass": "~0.7.1",
+    "gulp-autoprefixer": "~1.0.1"
   }
 }
