--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
   "devDependencies": {
     "gulp": "~3.8.9",
     "gulp-ruby-sass": "~0.7.1",
-    "gulp-autoprefixer": "~1.0.1"
+    "gulp-autoprefixer": "~1.0.1",
+    "gulp-rename": "~1.2.0",
+    "gulp-concat": "~2.4.2",
+    "gulp-minify-css": "~0.3.11",
+    "gulp-uglify": "~1.0.2"
   }
 }
