--- a/package.json
+++ b/package.json
@@ -10,18 +10,18 @@
     "type": "git",
     "url": "git://github.com/camilolunacom/mor-charpentier.git"
   },
-  "author": "cesosag",
+  "author": "camilolunacom",
   "license": "BSD-2-Clause",
   "bugs": {
     "url": "https://github.com/camilolunacom/mor-charpentier/issues"
   },
   "devDependencies": {
-    "gulp": "~3.8.9",
+    "gulp": "^4.0.2",
     "gulp-autoprefixer": "~1.0.1",
+    "gulp-clean-css": "^4.3.0",
     "gulp-concat": "~2.4.2",
-    "gulp-minify-css": "~0.3.11",
     "gulp-rename": "~1.2.0",
-    "gulp-ruby-sass": "~0.7.1",
-    "gulp-uglify": "~1.0.2"
+    "gulp-ruby-sass": "^3.0.0",
+    "gulp-uglify": "^3.0.2"
   }
 }
